--- a/static/homepage.html
+++ b/static/homepage.html
@@ -1,1 +1,82 @@
-<h1>This is HOMEPAGE</h1>
+<!doctype html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    
+    <title>Homepage</title>
+    
+    <link rel="stylesheet" href="/design/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="/design/css/custom.css">
+</head>
+<body id="homepage">
+    <nav>
+        <ul class="flexbox">
+            <li>
+                <a class="sw-logo" href="https://starwars.com" target="_blank">
+                    <img src="assets/sw.png" />
+                </a>
+            </li>
+            <li>
+                <a class="compare" href="compare.html">
+                    Compare
+                </a>
+            </li>
+            <li class="m-left-auto">
+                <a class="login-register" href="login.html">
+                    Login/Register
+                </a>
+            </li>
+        </ul>
+    </nav>
+    <div class="title-container">
+        <h2>
+            Your spacecrafts
+        </h2>
+    </div>
+    <main class="content">
+        <div class="container">
+            <div class="row buttons">
+                <div class="col-12 center">
+                    <a class="btn btn-darks" href="coverflow.html">
+                        Show in coverflow
+                    </a>
+                </div>
+            </div>
+            <div class="row table">
+                <table>
+                    <tr>
+                        <th>Name</th>
+                        <th>Manufacturer</th>
+                        <th>Type</th>
+                        <th>Max. velocity</th>
+                        <th>Price</th>
+                    </tr>
+                    <tr class="spacecraft-table-row">
+                        <td>LA-AT</td>
+                        <td>Rothana Heavy Engineering</td>
+                        <td>Gunship</td>
+                        <td>700 km/h</td>
+                        <td>$200 000</td>
+                    </tr>
+                    <tr class="spacecraft-table-row">
+                        <td>X-wing</td>
+                        <td>Incom Coproration</td>
+                        <td>Starfighter</td>
+                        <td>2500 km/h</td>
+                        <td>$290 000</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </main>
+
+    <footer class="container copyright">
+        <div class="row">
+            <p>Készítette: ReiterM, 2022</p>
+        </div>
+    </footer>
+
+    <script src="/design/bootstrap/bootstrap.bundle.min.js"></script>
+</body>
+</html>
