--- a/static/homepage.html
+++ b/static/homepage.html
@@ -37,36 +37,38 @@
     <main class="content">
         <div class="container">
             <div class="row buttons">
-                <div class="col-12 center">
+                <div class="col-12">
                     <a class="btn btn-darks" href="coverflow.html">
                         Show in coverflow
                     </a>
                 </div>
             </div>
-            <div class="row table">
-                <table>
-                    <tr>
-                        <th>Name</th>
-                        <th>Manufacturer</th>
-                        <th>Type</th>
-                        <th>Max. velocity</th>
-                        <th>Price</th>
-                    </tr>
-                    <tr class="spacecraft-table-row">
-                        <td>LA-AT</td>
-                        <td>Rothana Heavy Engineering</td>
-                        <td>Gunship</td>
-                        <td>700 km/h</td>
-                        <td>$200 000</td>
-                    </tr>
-                    <tr class="spacecraft-table-row">
-                        <td>X-wing</td>
-                        <td>Incom Coproration</td>
-                        <td>Starfighter</td>
-                        <td>2500 km/h</td>
-                        <td>$290 000</td>
-                    </tr>
-                </table>
+            <div class="row">
+                <div class="col-12">
+                    <table>
+                        <tr>
+                            <th>Name</th>
+                            <th>Manufacturer</th>
+                            <th>Type</th>
+                            <th>Max. velocity</th>
+                            <th>Price</th>
+                        </tr>
+                        <tr class="spacecraft-table-row red-row">
+                            <td>LA-AT</td>
+                            <td>Rothana Heavy Engineering</td>
+                            <td>Gunship</td>
+                            <td>700 km/h</td>
+                            <td>$200 000</td>
+                        </tr>
+                        <tr class="spacecraft-table-row red-row">
+                            <td>X-wing</td>
+                            <td>Incom Coproration</td>
+                            <td>Starfighter</td>
+                            <td>2500 km/h</td>
+                            <td>$290 000</td>
+                        </tr>
+                    </table>
+                </div>
             </div>
         </div>
     </main>
