--- a/static/details.html
+++ b/static/details.html
@@ -1,1 +1,176 @@
-<h1>This is DETAILS</h1>
+<!doctype html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    
+    <title>Details</title>
+    
+    <link rel="stylesheet" href="/design/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="/design/css/custom.css">
+</head>
+<body id="details">
+    <nav>
+        <ul class="flexbox">
+            <li>
+                <a class="sw-logo" href="https://starwars.com" target="_blank">
+                    <img src="assets/sw.png" />
+                </a>
+            </li>
+            <li>
+                <a class="compare" href="compare.html">
+                    Compare
+                </a>
+            </li>
+            <li class="m-left-auto">
+                <a class="login-register" href="login.html">
+                    Login/Register
+                </a>
+            </li>
+        </ul>
+    </nav>
+    <div class="title-container">
+        <h2>
+            Spacecraft details
+        </h2>
+    </div>
+    <main class="content">
+        <div class="container">
+            <div class="row buttons">
+                <div class="col-12">
+                    <a class="btn btn-darks" href="homepage.html">
+                        Back to listing
+                    </a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-5">
+                    <div class="new-layer">
+                        <img class="details-img" src="assets/spacecrafts/laat.webp">
+                        <span class="spacecraft-title">
+                            LA-AT
+                        </span>
+                        <span class="spacecraft-type">
+                            , gunship
+                        </span>
+                    </div>
+                </div>
+                <div class="col-7">
+                    <table>
+                        <tr>
+                            <th>Property</th>
+                            <th>Value</th>
+                        </tr>
+                        <tr class="details-table-row gray-row">
+                            <td>
+                                <p>Manufacturer</p> 
+                            </td>
+                            <td>
+                                <p>Rothana Heavy Engineerin</p> 
+                            </td>
+                        </tr>
+                        <tr class="details-table-row gray-row">
+                            <td>
+                                <p>Price</p> 
+                            </td>
+                            <td>
+                                <p>$200 000</p> 
+                            </td>
+                        </tr>
+                        <tr class="details-table-row gray-row">
+                            <td>
+                                <p>Passengers</p> 
+                            </td>
+                            <td>
+                                <p>20 + 5 additional</p> 
+                            </td>
+                        </tr>
+                        <tr class="details-table-row gray-row">
+                            <td>
+                                <p>Type</p> 
+                            </td>
+                            <td>
+                                <p>gunship</p> 
+                            </td>
+                        </tr>
+                        <tr class="details-table-row gray-row">
+                            <td>
+                                <p>Length</p> 
+                            </td>
+                            <td>
+                                <p>17.69 m</p> 
+                            </td>
+                        </tr>
+                        <tr class="details-table-row gray-row">
+                            <td>
+                                <p>Width</p> 
+                            </td>
+                            <td>
+                                <p>17 m</p> 
+                            </td>
+                        </tr>
+                        <tr class="details-table-row gray-row">
+                            <td>
+                                <p>Engine</p> 
+                            </td>
+                            <td>
+                                <p>Repulsorlift arrays</p> 
+                            </td>
+                        </tr>
+                        <tr class="details-table-row gray-row">
+                            <td>
+                                <p>Hyperdrive</p> 
+                            </td>
+                            <td>
+                                <p>none</p> 
+                            </td>
+                        </tr>
+                        <tr class="details-table-row gray-row">
+                            <td>
+                                <p>Cargo capacity</p> 
+                            </td>
+                            <td>
+                                <p>30 kg</p> 
+                            </td>
+                        </tr>
+                        <tr class="details-table-row gray-row">
+                            <td>
+                                <p>Maximum velocity</p> 
+                            </td>
+                            <td>
+                                <p>620 km/h</p> 
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 comments">
+                    <div class="comment">
+                        <h3 class="comment-title">
+                            Very best spacecraft in whole star wars universe!!! 100% recommended!
+                        </h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        <h4 class="comment-date">2022.03.07.</h4>
+                    </div>
+                    <div class="comment">
+                        <h3 class="comment-title">
+                            Very best spacecraft in whole star wars universe!!! 100% recommended!
+                        </h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        <h4 class="comment-date">2022.03.07.</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <footer class="container copyright">
+        <div class="row">
+            <p>Készítette: ReiterM, 2022</p>
+        </div>
+    </footer>
+
+    <script src="/design/bootstrap/bootstrap.bundle.min.js"></script>
+</body>
+</html>
