--- a/static/homepage.html
+++ b/static/homepage.html
@@ -52,20 +52,36 @@
                             <th>Type</th>
                             <th>Max. velocity</th>
                             <th>Price</th>
+                            <th>Details</th>
+                            <th>Compare</th>
                         </tr>
-                        <tr class="spacecraft-table-row red-row">
+                        <tr class="spacecraft-table-row gray-row">
                             <td>LA-AT</td>
                             <td>Rothana Heavy Engineering</td>
                             <td>Gunship</td>
                             <td>700 km/h</td>
                             <td>$200 000</td>
+                            <td><a class="btn btn-darks" href="details.html">Details</a></td>
+                            <td>
+                                <label class="checkbox-container">
+                                    <input type="checkbox">
+                                    <span class="checkmark"></span>
+                                </label>
+                            </td>
                         </tr>
-                        <tr class="spacecraft-table-row red-row">
+                        <tr class="spacecraft-table-row gray-row">
                             <td>X-wing</td>
                             <td>Incom Coproration</td>
                             <td>Starfighter</td>
                             <td>2500 km/h</td>
                             <td>$290 000</td>
+                            <td><a class="btn btn-darks" href="details.html">Details</a></td>
+                            <td>
+                                <label class="checkbox-container">
+                                    <input type="checkbox">
+                                    <span class="checkmark"></span>
+                                </label>
+                            </td>
                         </tr>
                     </table>
                 </div>
