--- a/static/login.html
+++ b/static/login.html
@@ -1,1 +1,71 @@
-<h1>This is LOGIN</h1>
+<!doctype html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    
+    <title>Login</title>
+    
+    <link rel="stylesheet" href="/design/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="/design/css/custom.css">
+</head>
+<body id="login">
+    <nav>
+        <ul class="flexbox">
+            <li>
+                <a class="sw-logo" href="https://starwars.com" target="_blank">
+                    <img src="assets/sw.png" />
+                </a>
+            </li>
+        </ul>
+    </nav>
+    <div class="title-container">
+        <h2>
+            Login or register
+        </h2>
+    </div>
+    <main class="content">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <a class="btn btn-darks" href="homepage.html">
+                        Back to listing
+                    </a>
+                    <a class="btn btn-darks">
+                        Register
+                    </a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 center">
+                    <form>
+                        <div>
+                            <label>
+                                Username: 
+                                <input type="text">
+                            </label>
+                        </div>
+                        <div>
+                            <label>
+                                Password: 
+                                <input type="password">
+                            </label>
+                        </div>
+                        <a href="homepage.html">Cancel</a>
+                        <input type="submit" value="Login">
+                    </form>
+                    <a href="#" >Forgotten password?</a>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <footer class="container copyright">
+        <div class="row">
+            <p>Készítette: ReiterM, 2022</p>
+        </div>
+    </footer>
+
+    <script src="/design/bootstrap/bootstrap.bundle.min.js"></script>
+</body>
+</html>
