--- a/static/addspacecraft.html
+++ b/static/addspacecraft.html
@@ -87,11 +87,14 @@
                                 <input id="spacecraft-velocity" type="number" required >
                                 <label for="spacecraft-velocity">Maximum velocity (km/h)</label>
                             </div>
-                            <p class="center">If no data for given property,<br>use '-' character!</p>
-                            <input class="upload-photo" type="file" multiple required>
+                            <p class="center">If no data for given property,<br>use '-' character or 0 for numbers!</p>
+                            <label id="upload-container" for="spacecraft-photo">
+                                <img id="upload-photo" src="assets/file_upload.png">
+                                <span id="upload-text">Select an image</span>
+                            </label>
+                            <input id="upload-input" type="file" accept="image/png, image/jpeg, image/webp, image/gif" required>
                             <input class="btn btn-darks size-100" type="submit" value="Add">
                         </form>
-                        <!--a class="forgotten-password btn btn-darks" href="#" >Forgot password?</a-->
                     </div>
                 </div>
             </div>
@@ -105,5 +108,6 @@
     </footer>
 
     <script src="/design/bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="/js/file_upload.js"></script>
 </body>
 </html>
