--- a/static/homepage.html
+++ b/static/homepage.html
@@ -38,8 +38,8 @@
         <div class="container">
             <div class="row buttons">
                 <div class="col-12">
-                    <a class="btn btn-darks" href="coverflow.html">
-                        Show in coverflow
+                    <a class="btn btn-darks" href="grid.html">
+                        Show in grid
                     </a>
                 </div>
             </div>
