--- a/static/grid.html
+++ b/static/grid.html
@@ -29,6 +29,11 @@
             </li>
         </ul>
     </nav>
+    <div class="title-container">
+        <h2>
+            Spacecraft grid
+        </h2>
+    </div>
     <main class="content">
         <div class="container">
             <div class="row">
