--- a/static/addspacecraft.html
+++ b/static/addspacecraft.html
@@ -41,7 +41,7 @@
             </div>
             <div class="row">
                 <div class="col-12 center">
-                    <div class="login-container">
+                    <div class="input-container">
                         <form>
                             <div class="input-field">
                                 <input id="spacecraft-name" type="text" required >
