--- a/static/details.html
+++ b/static/details.html
@@ -36,6 +36,9 @@
                     <a class="btn btn-darks" href="homepage.html">
                         Back to listing
                     </a>
+                    <a class="btn btn-darks" href="comment.html">
+                        Rate or comment
+                    </a>
                 </div>
             </div>
             <div class="row">
@@ -49,6 +52,7 @@
                             , gunship
                         </span>
                     </div>
+                    <p class="user-owner">added by @admin</p>
                 </div>
                 <div class="col-7">
                     <table>
