--- a/static/homepage.html
+++ b/static/homepage.html
@@ -41,6 +41,9 @@
                     <a class="btn btn-darks" href="grid.html">
                         Show in grid
                     </a>
+                    <a class="btn btn-darks" href="addspacecraft.html">
+                        Add spacecraft
+                    </a>
                 </div>
             </div>
             <div class="row">
