--- a/static/comment.html
+++ b/static/comment.html
@@ -18,11 +18,14 @@
                 </a>
             </li>
             <li class="m-left-auto">
-                <a class="logged-in-user" href="#">
-                    <img class="user-profile-pic" src="assets/users/default_user.png">
+                <a id="logged-in-user">
+                    <img id="user-profile-pic" src="assets/users/default_user.png">
                     Hello, *user*!
                 </a>
             </li>
+            <a id="logout-button" class="hidden" href="#">
+                Log out
+            </a>
         </ul>
     </nav>
     <div class="title-container">
@@ -62,5 +65,6 @@
     </footer>
 
     <script src="/design/bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="/js/logout.js"></script>
 </body>
 </html>
