--- a/static/details.html
+++ b/static/details.html
@@ -18,10 +18,14 @@
                 </a>
             </li>
             <li class="m-left-auto">
-                <a class="login-register" href="login.html">
-                    Login/Register
+                <a id="logged-in-user">
+                    <img id="user-profile-pic" src="assets/users/default_user.png">
+                    Hello, *user*!
                 </a>
             </li>
+            <a id="logout-button" class="hidden" href="#">
+                Log out
+            </a>
         </ul>
     </nav>
     <div class="title-container">
@@ -33,11 +37,17 @@
         <div class="container">
             <div class="row buttons">
                 <div class="col-12">
-                    <a class="btn btn-darks" href="homepage.html">
+                    <a class="btn btn-darks" href="list.html">
                         Back to listing
                     </a>
                     <a class="btn btn-darks" href="comment.html">
                         Rate or comment
+                    </a>
+                    <a class="btn btn-darks" href="#">
+                        Edit
+                    </a>
+                    <a class="btn btn-darks" href="#">
+                        Delete
                     </a>
                 </div>
             </div>
@@ -171,5 +181,6 @@
     </footer>
 
     <script src="/design/bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="/js/logout.js"></script>
 </body>
 </html>
