--- a/static/index.html
+++ b/static/index.html
@@ -4,28 +4,88 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
-    <title>Spacecraft Comparator</title>
+    <title>Login</title>
     
     <link rel="stylesheet" href="/design/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="/design/css/custom.css">
-    <link rel="preload" href="./spline/scene.json" as="fetch">
 </head>
-<body id="intro">
-    <main class="container">
-        <div class="row">
-            <div id="title" class="col-12">
-                <h1 id="intro-title-main">Welcome!</h1>
-                <h2 id="intro-title-sub">to the<br>Star Wars Spacecraft Comparator</h2>
+<body id="login">
+    <nav>
+        <ul class="flexbox">
+            <li>
+                <a class="sw-logo" href="https://starwars.com" target="_blank">
+                    <img src="assets/sw.png" />
+                </a>
+            </li>
+        </ul>
+    </nav>
+    <div class="title-container">
+        <h2>
+            Login or register
+        </h2>
+    </div>
+    <main class="content">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <a id="register-button" class="btn btn-darks">
+                        Register
+                    </a>
+                    <a id="login-button" class="btn btn-darks">
+                        Login
+                    </a>
+                </div>
             </div>
-            <div id="begin" class="col-12">
-                <a class="btn btn-darks" href="homepage.html">BEGIN THE JOUNREY</a>
+            <div class="row">
+                <div class="col-12 center">
+                    <div id="login-container" class="input-container">
+                        <form id="login-form">
+                            <div class="input-field">
+                                <input id="username" type="text" required >
+                                <label for="username">Your username</label>
+                            </div>
+                            <div class="input-field">
+                                <input id="password" type="password" required >
+                                <label for="password">Your password</label>
+                            </div>
+                            <div class="center">
+                                <input class="btn btn-darks size-80" type="submit" value="Login">
+                                <a class="forgotten-password btn btn-darks size-80" href="#" >Forgot password?</a>
+                            </div>
+                        </form>
+
+                        <form id="register-form">
+                            <div class="input-field">
+                                <input id="username-reg" type="text" required >
+                                <label for="username-reg">Username</label>
+                            </div>
+                            <div class="input-field">
+                                <input id="email-reg" type="email" required >
+                                <label for="email-reg">E-mail</label>
+                            </div>
+                            <div class="input-field">
+                                <input id="password-reg" type="password" required >
+                                <label for="password-reg">Password</label>
+                            </div>
+                            <div class="input-field">
+                                <input id="password-again-reg" type="password" required >
+                                <label for="password-again-reg">Password again</label>
+                            </div>
+                            <label id="upload-container" for="upload-input">
+                                <img id="upload-photo" src="assets/file_upload.png">
+                                <span id="upload-text">Select an image</span>
+                            </label>
+                            <input id="upload-input" type="file" accept="image/png, image/jpeg, image/webp, image/gif" required>
+                            <div class="center">
+                                <input class="btn btn-darks size-80" type="submit" value="Register">
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </div>
-            <p id="canvas-p">(Feel free to have a look at this beauty with the cursor)</p>
-        </div>
-        <div id="container" >
-            <canvas id="canvas3d"></canvas>
         </div>
     </main>
+
     <footer class="container copyright">
         <div class="row">
             <p>Készítette: ReiterM, 2022</p>
@@ -33,6 +93,7 @@
     </footer>
 
     <script src="/design/bootstrap/bootstrap.bundle.min.js"></script>
-    <script type="module" src="/spline/start.js"></script>
+    <script src="/js/login.js"></script>
+    <script src="/js/file_upload.js"></script>
 </body>
 </html>
