--- a/static/details.html
+++ b/static/details.html
@@ -40,7 +40,7 @@
                     <a class="btn btn-darks" href="list.html">
                         Back to listing
                     </a>
-                    <a class="btn btn-darks" href="comment.html">
+                    <a class="btn btn-darks" href="addcomment.html">
                         Rate or comment
                     </a>
                     <a class="btn btn-darks" href="#">
