--- a/static/404.html
+++ b/static/404.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
-    <title>Forgot password</title>
+    <title>404</title>
     
     <link rel="stylesheet" href="/design/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="/design/css/custom.css">
 </head>
-<body id="forgot">
+<body id="error">
     <nav>
         <ul class="flexbox">
             <li>
@@ -17,33 +17,26 @@
                     <img src="assets/sw.png" />
                 </a>
             </li>
-            <li class="m-left-auto">
-                <a id="login-register" href="index.html">
-                    Login or register
-                </a>
-            </li>
         </ul>
     </nav>
     <div class="title-container">
         <h2>
-            Forgot password?
+            Error!
         </h2>
     </div>
     <main class="content">
         <div class="container">
             <div class="row">
+                <div class="col-12">
+                    <a class="btn btn-darks" href="index.html">
+                        Back to homepage
+                    </a>
+                </div>
+            </div>
+            <div class="row">
                 <div class="col-12 center">
-                    <div id="forgot-container" class="input-container">
-                        <form id="forgot-form">
-                            <div class="input-field">
-                                <input id="forgot-email" type="email" required >
-                                <label for="forgot-email">Registered e-mail address</label>
-                            </div>
-                            <div class="center">
-                                <input class="btn btn-darks size-80" type="submit" value="Új jelszó kérése">
-                            </div>
-                        </form>
-                    </div>
+                    <h1>Whoops! Error 404</h1>
+                    <h3>The required content does not exist!</h3>
                 </div>
             </div>
         </div>
