--- a/static/index.html
+++ b/static/index.html
@@ -50,7 +50,7 @@
                             </div>
                             <div class="center">
                                 <input class="btn btn-darks size-80" type="submit" value="Login">
-                                <!--a class="forgotten-password btn btn-darks size-80" href="#" >Forgot password?</a-->
+                                <a class="forgotten-password btn btn-darks size-80" href="forgotpassword.html" >Forgot password?</a>
                             </div>
                         </form>
 
