--- a/static/list.html
+++ b/static/list.html
@@ -60,6 +60,7 @@
                             <th>Type</th>
                             <th>Max. velocity</th>
                             <th>Price</th>
+                            <th>Author</th>
                             <th>Details</th>
                             <th>Compare</th>
                         </tr>
@@ -69,6 +70,7 @@
                             <td>Gunship</td>
                             <td>700 km/h</td>
                             <td>$200 000</td>
+                            <td>@admin</td>
                             <td><a class="btn btn-darks" href="details.html">Details</a></td>
                             <td>
                                 <label class="checkbox-container">
@@ -83,6 +85,7 @@
                             <td>Starfighter</td>
                             <td>2500 km/h</td>
                             <td>$290 000</td>
+                            <td>@admin</td>
                             <td><a class="btn btn-darks" href="details.html">Details</a></td>
                             <td>
                                 <label class="checkbox-container">
