--- a/static/addcomment.html
+++ b/static/addcomment.html
@@ -40,7 +40,7 @@
                     <div class="input-container">
                         <form>
                             <div class="input-field">
-                                <input id="spacecraft-comment" type="text" required >
+                                <textarea id="spacecraft-comment" required >Hello there!</textarea>
                                 <label for="spacecraft-comment">Comment</label>
                             </div>
                             <div class="input-field">
