--- a/static/index.html
+++ b/static/index.html
@@ -39,7 +39,7 @@
             <div class="row">
                 <div class="col-12 center">
                     <div id="login-container" class="input-container">
-                        <form id="login-form">
+                        <form id="login-form" method="post">
                             <div class="input-field">
                                 <input id="username" type="text" required >
                                 <label for="username">Your username</label>
@@ -54,7 +54,7 @@
                             </div>
                         </form>
 
-                        <form id="register-form">
+                        <form id="register-form" method="post" enctype="multipart/form-data">
                             <div class="input-field">
                                 <input id="username-reg" type="text" required >
                                 <label for="username-reg">Username</label>
@@ -75,7 +75,7 @@
                                 <img id="upload-photo" src="assets/file_upload.png">
                                 <span id="upload-text">Select an image</span>
                             </label>
-                            <input id="upload-input" type="file" accept="image/png, image/jpeg, image/webp, image/gif" required>
+                            <input id="upload-input" type="file" name="regpic" accept="image/png, image/jpeg, image/webp, image/gif" required>
                             <div class="center">
                                 <input class="btn btn-darks size-80" type="submit" value="Register">
                             </div>
