--- a/static/addcomment.html
+++ b/static/addcomment.html
@@ -40,11 +40,15 @@
                     <div class="input-container">
                         <form>
                             <div class="input-field">
-                                <textarea id="spacecraft-comment" required >Hello there!</textarea>
+                                <input id="spacecraft-comment-title" required />
+                                <label for="spacecraft-comment-title">Title of comment</label>
+                            </div>
+                            <div class="input-field">
+                                <input id="spacecraft-comment" required />
                                 <label for="spacecraft-comment">Comment</label>
                             </div>
                             <div class="input-field">
-                                <input id="spacecraft-rating" type="number" required min="1" max="5">
+                                <input id="spacecraft-rating" type="number" required min="1" max="5"/>
                                 <label for="spacecraft-rating">Rating</label>
                             </div>
                             <div class="add-buttons flexbox">
